--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
     <section id="title">
         <div class="container-fluid title">
+            <img class="cattails" src="images/cattails_large.png" alt="cattails">
             <h1 class="banner-title">Wetland Ecosystem Ecology Lab</h1>
             <h2 class="banner-subtitle">ASU</h2>
         </div>
