Responsiveness, Cards, Logos Update
Added logos to bottom ; cards connecting to other pages ; added mobile responsivity

--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
 
 
 <body>
-    <section id="navbar">
+    <section id="navbar" class="dark">
         <nav class="navbar navbar-light">
             <div class="container-fluid nav-div">
                 <a class="navbar-brand" href="index.html">
-                    <h2 class="nav-header">WEEL</h2>
+                    <img class="logo align-text-top" src="images/logo.png" alt="">
+                    <h2 class="nav-title">WEEL</h2>
                 </a>
 
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -84,7 +85,7 @@
           </nav>
     </section>
 
-    <section id="title">
+    <section id="title" class="light">
         <div class="container-fluid title">
             <img class="cattails" src="images/cattails_large.png" alt="cattails">
             <h1 class="banner-title">Wetland Ecosystem Ecology Lab</h1>
@@ -92,7 +93,7 @@
         </div>
     </section>
 
-    <section id="welcome" class="green">
+    <section id="welcome" class="dark">
         <div class="container-fluid welcome">
             <!-- <img class="welcome-image" src="images/tresrios.jpg" alt="Tres Rios"> -->
 
@@ -120,5 +121,71 @@
                  located in human and non-human dominated regions.</p>
         </div>
     </section>
+
+    <section id="cards" class="light">
+      <div class="grid">
+        <div class="row">
+
+          <div class="col-lg-4 col-md-12">
+            <div class="card">
+              <img class="card-img-top card-image" src="images/researchers.jpeg" alt="researchers">
+              <div class="card-body">
+                <h3 class="card-title">Research</h3>
+                <p class="card-text">Learn more about our research areas, past and current projects, and findings.</p>
+                <a href="#" class="btn btn-primary card-btn">
+                  <h5 class="card-learn-more">LEARN MORE</h5>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-12">
+            <div class="card">
+              <img class="card-img-top card-image" src="images/team.jpg" alt="researchers">
+              <div class="card-body">
+                <h3 class="card-title">People</h3>
+                <p class="card-text">Meet past and present members of the WEEL Lab.</p>
+                <a href="#" class="btn btn-primary card-btn">
+                  <h5 class="card-learn-more">MEET US</h5>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-12">
+            <div class="card">
+              <img class="card-img-top card-image" src="images/team.jpg" alt="researchers">
+              <div class="card-body">
+                <h3 class="card-title">CAP LTER</h3>
+                <p class="card-text">WEEL is a partner of CAP. Learn more about the organization here.</p>
+                <a href="#" class="btn btn-primary card-btn">
+                  <h5 class="card-learn-more">LEARN MORE</h5>
+                </a>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </section>
+
+<section id="logos" class="light">
+  <div class="container-fluid">
+    <div class="grid">
+      <div class="row">
+        <div class="col-lg-4">
+          <img class="org-sustainability" src="images/sustainability.png" alt="julie ann wrigley sustainability">
+        </div>
+        <div class="col-lg-4">
+          <img class="org-nsf" src="images/nsf.png" alt="NSF">
+        </div>
+        <div class="col-lg-4">
+          <img class="org-cap" src="images/cap.png" alt=" CAP LTER">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 </body>
 </html>
